# tongwen

./: Cargo.toml  README.md  deno.json  deno.jsonc
.zed/: settings.json
homebrew/: tongwen.rb
scripts/: smoke.ts
src/: lib.rs  lib.ts  main.rs  main.ts  voiceink.ts
tests/: smoke.rs
