[package]
name = "tongwen"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }
zhconv = "0.4.0"
