[package]
name = "tongwen"
version = "0.2.0"
edition = "2021"

[dependencies]
async-openai = { version = "0.40.2", features = ["chat-completion"] }
axum = "0.8.9"
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
uuid = { version = "1.23", features = ["v4"] }
zhconv = "0.4.1"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
